fixing spacing issues

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -577,19 +577,26 @@
     display: flex;
     -webkit-align-items: center;
           align-items: center;
+    @include media-query($on-palm) {
+      flex-wrap: wrap;
+    }
 }
 #rsvp-container p {
   margin-bottom: 0;
 }
 
 #rsvp-box-left, #rsvp-box-right {
-      @include media-query($on-laptop) {
+      @include media-query($on-palm) {
         width: 100%;
     }
 }
 
 #rsvp-box-left {
   margin-right: 1em;
+  @include media-query($on-palm) {
+    margin-bottom: 1em;
+    margin-right: 0;
+  }
 }
 
 #rsvp-box-right {
